<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.SignUpScreen">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_button_back"
        android:backgroundTint="@color/transparent_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:onClick="back_to_login_screen"
        />

    <TextView
        android:id="@+id/text_view_how_are_you_want_to_registrated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you_want_to_registrated"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="150dp"
        />
    <Button
        android:id="@+id/button_user"
        android:layout_width="200dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/user_text"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_green_color"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_admin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/administrator_text"
        android:textColor="@color/main_green_color"
        android:background="@drawable/round_white_button_with_green_width_style"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>