<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_layout"
    android:background="@drawable/enter_screen_fon"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="на главный экран"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onHomePage"
        />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/click_close_poput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearlayout_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearlayout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:src="@drawable/logo_tochka_enter_screen"
            />

        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/white"
            android:text="@string/enter_text"
            android:textColor="@color/main_green_color"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_registration"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/button_registration_main_screen_style"
            android:text="@string/registration_text"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/poput_window_login_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/poput_window_login_linearlayout_style"
        app:layout_constraintTop_toTopOf="@id/linearlayout_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Вход"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                />
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_height="40dp"
                android:hint="@string/e_mail_text"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/edit_text_login_style"
                android:layout_marginTop="48dp"
                android:padding="5dp"
                />

            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_height="40dp"
                android:hint="@string/pass_text"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_login_style"
                android:layout_marginTop="32dp"
                android:padding="5dp"
                android:password="true"
                />

            <Button
                android:id="@+id/button_login_realy"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:text="Войти"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/main_green_color"
                />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="на главный экран"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onHomePage"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

