<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen.fragments.fragment_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/your_orientation_linearlayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/home_screen_your_orientation_panel_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:onClick="select_city_click"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_orientation_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orenburg_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/your_orientation_linearlayout">

            <TextView
                android:id="@+id/what_news_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_news_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                />

            <HorizontalScrollView
                android:orientation="horizontal"
                android:id="@+id/news_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/what_news_textview"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/news_listview"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/home_screen_news_listview_item_model"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                </RelativeLayout>

            </HorizontalScrollView>


            <TextView
                android:id="@+id/groups_in_your_city_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups_in_your_city_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_scroll"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                />

            <HorizontalScrollView
                android:orientation="horizontal"
                android:id="@+id/groups_in_your_city_hs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groups_in_your_city_textview"
                android:layout_marginTop="24dp"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/groups_in_your_city_rv"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/home_screen_rec_group_lv_item_model"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                        ></androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
            </HorizontalScrollView>



            <TextView
                android:id="@+id/your_groups_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ваши группы"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groups_in_your_city_hs"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                />

            <ScrollView
                android:id="@+id/your_groups_sv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_groups_textview"
                android:layout_marginTop="24dp"
                android:orientation="vertical"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/your_groups_rv"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/home_screen_your_groups_lv_item_model"/>
                </RelativeLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>